# scotus_eyecite

./: EyeciteAnalysis.ipynb  bugdemo.py  main.py  pyproject.toml  st_eyecite.py
scotus_eyecite/: interleave.py
