[tool.poetry]
name = "scotus-eyecite"
version = "0.1.0"
description = ""
authors = ["Chris Brew <brewc@dy6nm2ng4q.legal.regn.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
eyecite = "^2.6.0"
datasets = "^2.17.0"
fastparquet = "^2024.2.0"
jupyter = "^1.0.0"
streamlit = "^1.31.1"
pandas = "^2.2.0"
watchdog = "^4.0.0"
tinyhtml = "^1.2.0"
yattag = "^1.15.2"
pylint = "^3.0.3"
spacy = "^3.7.4"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1.tar.gz"}
spacy-streamlit = "^1.0.6"
dill = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

